[project]
name = "ml-utils"
version = "0.1.0"
description = "ML utilities for config. management, logging, and more."
readme = "README.md"
authors = [
    { name = "Sahil Maheshwari", email = "sahil030288@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "rich-argparse>=1.7.2",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
